--- a/trunk/potassco_guide/prefopt.tex
+++ b/trunk/potassco_guide/prefopt.tex
@@ -433,10 +433,9 @@ Additionally, \asprin\ allows \clingo\ minimize and maximize statements
 In this case, using \asprin's library, the system computes optimal stable models
 following the semantics of \clingo.%
 \footnote{%
-More in detail, the minimize and maximize statements 
+The minimize and maximize statements 
 are translated into preference statements of type \code{clingo\_minimize}.
-%
-This type is implemented in \asprin's library according to the semantics of \clingo.
+wihch is implemented in \asprin's library according to the semantics of \clingo.
 %
 Hence, using the library, the system computes \clingo\ optimal stable models.
 %
